fixed align

--- a/less/index.less
+++ b/less/index.less
@@ -27,7 +27,7 @@
 .block {
   position: relative;
   display: block;
-  margin: 100px;
+  margin: 0 auto;
   width: 300px;
   height: 300px;
   border: 1px solid black;
